--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -31,6 +31,6 @@ footer
     section.copyright
         .container
             .copyright__wrap
-                .copyright__title Copyright © 2021 #[a.copyright__link(href=metaURL) #{metaSitename}]
+                .copyright__title Copyright © 2023 #[a.copyright__link(href=metaURL) #{metaSitename}] Všechna práva vyhrazena.
                 .copyright__author Vytvořeno v 
                     a.copyright__link(href=metaAuthorURL) #[img.lazyload(src="/img/load-symbol.svg" data-src="/img/eline-logo.svg" alt="eline.cz" aria-label="eline.cz")]
