--- a/src/pug/kosik-1.pug
+++ b/src/pug/kosik-1.pug
@@ -127,12 +127,12 @@ html(lang=lang)
                     
                                 .cart-table__export
                                     .cart-table__export-group
-                                        span Exportovat košík
+                                        span #[img(src="/img/icons/save.svg")] Exportovat košík
                                         span.item CSV
                                         span.item XML
 
                                     .cart-table__export-group
-                                        span Načíst košík
+                                        span #[img(src="/img/icons/upload.svg")] Načíst košík
                                         span.item CSV
                                         span.item XML
 
