--- a/src/pug/kontakty.pug
+++ b/src/pug/kontakty.pug
@@ -21,51 +21,34 @@ html(lang=lang)
                             .row 
                                 .col-12.col-md-5
                                     .page-content__cell
-                                        h2 Zákaznická linka
-                                        h5 Provozní doba: Po-Pá 8:00 – 14:30
-                                        a.contact-block(href="tel:777800892") +420 777 800 892
-                                        p Na tomto telefonním čísle zjistíte obecné informace o dostupnostech jednotlivých produktů, době dodání, technické specifikace a máte možnost provést telefonickou objednávku zboží. Pokud chcete zjistit stav objednávky, přichystejte si prosím číslo této objednávky pro urychlení komunikace.
-                                        h5 Mimo pracovní dobu, mailově na #[a(href="mailto:info@kingtony.cz") info@kingtony.cz]
+                                        h2 Sídlo společnosti a fakturační adresa:
+                                        a.contact-block(href="tel:+420596911312") +420 596 911 312
+                                        ul 
+                                            li 
+                                                strong Národních mučedníků 499
+                                            li 738 01 Frýdek-Místek    
+                                            li  
+                                            li 258 52 591
+                                            li CZ25852591 
 
                                 .col-12.col-md-2
 
                                 .col-12.col-md-5
                                     .page-content__cell
-                                        h2 Velkoobchod
-                                        a.contact-block(href="mailto:ondera@seznam.cz") ondera@seznam.cz
-                                        p Na této mailové adrese, Vám rádi zodpovíme možnosti velkoobchodní spolupráce
-
-                                .col-12.col-md-5
-                                    .page-content__cell
-                                        h2 Fakturační adresa
+                                        h2 Provozovna a korespondenční adresa
+                                        a.contact-block(href="tel:+420558433735") +420 558 433 735
                                         ul 
                                             li 
-                                                strong kingtony s.r.o.
-                                            li Lískovecká 2782
-                                            li 73801  Frýdek-Místek
-                                            li
-                                            li IČ: 05844657
-                                            li DIČ: CZ05844657  
-                                            li
-                                            li kingtony s.r.o., C 69595 vedená u Krajského soudu v Ostravě                  
+                                                strong Národních mučedníků 499
+                                            li 738 01 Frýdek-Místek
+                                            li Po - Pá ... 8:00 - 16:00            
 
-                                .col-12.col-md-2
-
-                                .col-12.col-md-5
-                                    .page-content__cell
-                                        h2 Adresa expedičního skladu
-                                        ul 
-                                            li 
-                                                strong Expediční sklad Místek - Beskydská
-                                            li Beskydská 1488 (areál Slezan)
-                                            li 73801  Frýdek-Místek
-                                        a.contact-block(href="tel:777800892") +420 777 800 892
 
                                 .col-12.col-md-12
                                     .page-content__cell
                                         h2 Kde nás najdete  
                                         .page-content__map
-                                            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2582.356419116029!2d18.344653516279678!3d49.66642455142444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713f6e091cc7f4d%3A0xcd50128245eff2a6!2zQmVza3lkc2vDoSAxNDg4LCBNw61zdGVrLCA3MzggMDEgRnLDvWRlay1Nw61zdGVr!5e0!3m2!1sen!2scz!4v1623505331730!5m2!1sen!2scz" width="100%" height="320" style="border:0;" allowfullscreen="" loading="lazy")
+                                            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2581.4812309912713!2d18.3651375!3d49.682909900000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713f713fc6d5dc5%3A0xbde5f2f2742850a4!2zTsOhcm9kbsOtY2ggbXXEjWVkbsOta8WvIDQ5OSwgRnLDvWRlaywgNzM4IDAxIEZyw71kZWstTcOtc3Rlaw!5e0!3m2!1sen!2scz!4v1693871784940!5m2!1sen!2scz" width="100%" height="320" style="border:0;" allowfullscreen="" loading="lazy")
 
                                 .col-12.col-md-12
                                     .page-content__cell
