--- a/src/pug/components/_searchAutocomplete.pug
+++ b/src/pug/components/_searchAutocomplete.pug
@@ -2,11 +2,11 @@
     .searchAutocomplete__section 
         .searchAutocomplete__title Produkty
         .searchAutocomplete__item 
-            a.searchAutocomplete__link(href="/produkt-detail.html") Dřevěná bedna na 2 vína CARMEN VI
+            a.searchAutocomplete__link(href="/produkt-detail.html") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
         .searchAutocomplete__item 
-            a.searchAutocomplete__link(href="/produkt-detail.html") Dřevěná bedna na 2 vína CARMEN VI
+            a.searchAutocomplete__link(href="/produkt-detail.html") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
         .searchAutocomplete__item 
-            a.searchAutocomplete__link(href="/produkt-detail.html") Dřevěná bedna na 2 vína CARMEN VI
+            a.searchAutocomplete__link(href="/produkt-detail.html") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
 
 
     .searchAutocomplete__section 
