--- a/src/pug/ucet-historie.pug
+++ b/src/pug/ucet-historie.pug
@@ -43,7 +43,7 @@ html(lang=lang)
                                             table 
                                                 tr
                                                     td
-                                                        a(href="#") Dřevěná bedna na 2 vína CARMEN VI lorem ipsum
+                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
                                                     td 
                                                         span 3 ks
                                                     td
@@ -52,7 +52,7 @@ html(lang=lang)
                                                         span.--status 3/3 odesláno
                                                 tr
                                                     td
-                                                        a(href="#") Dřevěná bedna na 2 vína CARMEN VI lorem ipsum
+                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
                                                     td 
                                                         span 3 ks
                                                     td
@@ -75,7 +75,7 @@ html(lang=lang)
                                             table 
                                                 tr
                                                     td
-                                                        a(href="#") Dřevěná bedna na 2 vína CARMEN VI lorem ipsum
+                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
                                                     td 
                                                         span 3 ks
                                                     td
@@ -84,7 +84,7 @@ html(lang=lang)
                                                         span.--status 3/3 odesláno
                                                 tr
                                                     td
-                                                        a(href="#") Dřevěná bedna na 2 vína CARMEN VI lorem ipsum
+                                                        a(href="#") 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum
                                                     td 
                                                         span 3 ks
                                                     td
