--- a/src/pug/components/_breadcrumbs.pug
+++ b/src/pug/components/_breadcrumbs.pug
@@ -4,4 +4,4 @@
         img.breadcrumbs__separator(src="/img/icons/cheveron.svg" alt=">")
         a.breadcrumbs__item(href="/") Dřevěné boxy
         img.breadcrumbs__separator(src="/img/icons/cheveron.svg" alt=">")
-        span.breadcrumbs__item.--active Dřevěná bedna na 2 vína CARMEN VI
+        span.breadcrumbs__item.--active 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
