--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -22,9 +22,9 @@ footer
 
             .col-6.col-sm-6.col-lg-3
                 .footer__title Kontaktní informace
-                p.footer__text Ondera Aleš
-                p.footer__text J.Čapka 3097
-                p.footer__text Frýdek-Místek, 738 01
+                p.footer__text Národních mučedníků 499
+                p.footer__text 738 01 Frýdek-Místek
+                p.footer__text Po - Pá ... 8:00 - 16:00
                 a.footer__link(href="/kontakty.html") Více kontaktů
                 
 
