--- a/src/pug/components/_modal-cart.pug
+++ b/src/pug/components/_modal-cart.pug
@@ -14,7 +14,7 @@
                 h2.modal__title(id="modal-cart-title") Přidáno do košíku
                 button.modal__close(aria-label="Close modal" data-micromodal-close)
                 
-            p.modal__cart-title Dřevěná bedna na 2 vína CARMEN VI lorem ipsum dolor sit amet
+            p.modal__cart-title 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum dolor sit amet
             span.modal__cart-variant Varianta: Černý lak + prosklená dvířka
             span.modal__cart-variant Počet kusů: 1
             span.modal__cart-price 1 118 Kč
