--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -42,15 +42,15 @@ html(lang=lang)
                                     .product-detail__carousel(id="product-carousel")
                                         .product-detail__carouselItem
                                             .product-detail__carouselLink
-                                                img(src="/img/product-thumb-large.jpg" alt="Dřevěná bedna na 2 vína CARMEN VI lorem ipsum" title="Dřevěná bedna na 2 vína CARMEN VI lorem ipsum" loading="lazy")
+                                                img(src="/img/product-thumb-large.jpg" alt="2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum" title="2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum" loading="lazy")
                                                 span Lorem ipsum
                                         .product-detail__carouselItem
                                             .product-detail__carouselLink
-                                                img(src="/img/product-thumb-large.jpg" alt="Dřevěná bedna na 2 vína CARMEN VI lorem ipsum" title="Dřevěná bedna na 2 vína CARMEN VI lorem ipsum" loading="lazy")
+                                                img(src="/img/product-thumb-large.jpg" alt="2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum" title="2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum" loading="lazy")
                                                 span Lorem ipsum
                                         .product-detail__carouselItem
                                             .product-detail__carouselLink
-                                                img(src="/img/product-thumb-large.jpg" alt="Dřevěná bedna na 2 vína CARMEN VI lorem ipsum" title="Dřevěná bedna na 2 vína CARMEN VI lorem ipsum" loading="lazy")
+                                                img(src="/img/product-thumb-large.jpg" alt="2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum" title="2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum" loading="lazy")
                                                 span Lorem ipsum
 
                                     button.prev(aria-label="Zpět")
