--- a/src/pug/kosik-1.pug
+++ b/src/pug/kosik-1.pug
@@ -97,7 +97,7 @@ html(lang=lang)
                                                         .cart-item-price #[span 52.20] Kč
 
 
-                                .cart-table__footer
+                                .cart-table__footer.--step1
 
                                     .cart-table__footerSummary
                                         .cart-table__footerSummary-row
