--- a/src/scss/components/_cart-content.scss
+++ b/src/scss/components/_cart-content.scss
@@ -229,6 +229,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 40px;
+    flex-wrap: wrap;
 }
 .cart-table__export-group{
     display: flex;
@@ -695,5 +696,9 @@
 @media screen and (max-width: 767px){
     .cart-table__footer {
         display: none;
+    }
+    .cart-table__footer.--step1{
+        display: flex;
+        
     }
 }
