--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -5,14 +5,17 @@ footer
             .col-6.col-sm-6.col-lg-3
                 .footer__title O nákupu
                 a.footer__link(href="#") Obchodní podmínky
-                a.footer__link(href="#") Reklamační řád
-                a.footer__link(href="#") Jak nakupovat
-                a.footer__link(href="#") Výhody nákupu
+                a.footer__link(href="#") Reklamace
+                a.footer__link(href="#") Doprava a platba 
+                a.footer__link(href="#") O nákupu
 
             .col-6.col-sm-6.col-lg-3
                 .footer__title O nás
-                a.footer__link(href="#") O společnosti
+                a.footer__link(href="#") O značce
                 a.footer__link(href="#") Aktuality
+                a.footer__link(href="#") Poptávka
+                a.footer__link(href="#") Ke stažení
+
 
             .col-6.col-sm-6.col-lg-3
                 .footer__title Další odkazy
@@ -22,10 +25,8 @@ footer
 
             .col-6.col-sm-6.col-lg-3
                 .footer__title Kontaktní informace
-                p.footer__text Národních mučedníků 499
-                p.footer__text 738 01 Frýdek-Místek
-                p.footer__text Po - Pá ... 8:00 - 16:00
-                a.footer__link(href="/kontakty.html") Více kontaktů
+                a.footer__link(href="/kontakty.html") O společnosti
+                a.footer__link(href="/kontakty.html") Kontakty
                 
 
     section.copyright
