--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -24,7 +24,7 @@ header
             .header-nav
 
                 a.header-nav__link(href="#") O nás
-                a.header-nav__link(href="#") Kontakty
+                a.header-nav__link(href="/kontakty.html") Kontakty
 
                 .header-nav__dropdown(data-micromodal-trigger="modal-enquiry") Poptávka
 
