--- a/src/pug/components/_nav.pug
+++ b/src/pug/components/_nav.pug
@@ -22,13 +22,13 @@ nav(id="mainNav")
                                 img.lazyload(src="/img/load-symbol.svg" data-src="/img/product-thumb-medium.jpg" alt="" title="")
                                 ul 
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__title Rošty
+                                        a(href="/produkt-vypis.html").nav-submenu__title Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Noční stolky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné krabičky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné boxy
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
 
     .nav-item.expandable
         a.nav-linkDesktop(href="produkt-vypis.html") 
@@ -45,23 +45,23 @@ nav(id="mainNav")
                                 img.lazyload(src="/img/load-symbol.svg" data-src="/img/product-thumb-medium.jpg" alt="" title="")
                                 ul 
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__title Rošty
+                                        a(href="/produkt-vypis.html").nav-submenu__title Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Noční stolky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné krabičky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné boxy
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
     .nav-item 
-        a.nav-link(href="produkt-vypis.html") #[img(src="/img/nav-img.svg" alt="...")] Šuplíky
+        a.nav-link(href="produkt-vypis.html") #[img(src="/img/nav-img.svg" alt="...")] Dílenský nábytek a vozíky
     .nav-item 
-        a.nav-link(href="produkt-vypis.html") #[img(src="/img/nav-img.svg" alt="...")] Komody
+        a.nav-link(href="produkt-vypis.html") #[img(src="/img/nav-img.svg" alt="...")] Dílenský nábytek a vozíky
     .nav-item.expandable 
         a.nav-linkDesktop(href="produkt-vypis.html") 
             img(src="/img/nav-img.svg" alt="...")
             span Hlavice, ráčny a příslušenství pro ruční použití 
             img(src="/img/icons/cheveron-right.svg" alt="Rozbalit")
-        .nav-link(id="subToggle-2") #[img(src="/img/nav-img.svg" alt="...")] Noční stolky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
+        .nav-link(id="subToggle-2") #[img(src="/img/nav-img.svg" alt="...")] Dílenský nábytek a vozíky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit")]
         .nav-submenu(id="sub-2")
             .container
                 .row 
@@ -71,20 +71,20 @@ nav(id="mainNav")
                                 img.lazyload(src="/img/load-symbol.svg" data-src="/img/product-thumb-medium.jpg" alt="" title="")
                                 ul 
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__title Rošty
+                                        a(href="/produkt-vypis.html").nav-submenu__title Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Noční stolky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné krabičky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné boxy
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
         
     .nav-item.expandable
         a.nav-linkDesktop(href="produkt-vypis.html") 
             img(src="/img/nav-img.svg" alt="...")
             span Hlavice, ráčny a příslušenství pro ruční použití 
             img(src="/img/icons/cheveron-right.svg" alt="Rozbalit")   
-        .nav-link(id="subToggle-3") #[img(src="/img/nav-img.svg" alt="...")] Dřevěné krabičky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit" )]
+        .nav-link(id="subToggle-3") #[img(src="/img/nav-img.svg" alt="...")] Dílenský nábytek a vozíky #[img(src="/img/icons/cheveron.svg" alt="Rozbalit" )]
         .nav-submenu(id="sub-3")
             .container
                 .row 
@@ -94,15 +94,15 @@ nav(id="mainNav")
                                 img.lazyload(src="/img/load-symbol.svg" data-src="/img/product-thumb-medium.jpg" alt="" title="")
                                 ul 
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__title Rošty
+                                        a(href="/produkt-vypis.html").nav-submenu__title Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Noční stolky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné krabičky
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
                                     li 
-                                        a(href="/produkt-vypis.html").nav-submenu__link Dřevěné boxy
+                                        a(href="/produkt-vypis.html").nav-submenu__link Dílenský nábytek a vozíky
 
     .nav-item 
-        a.nav-link(href="produkt-vypis.html") #[img(src="/img/nav-img.svg" alt="...")] Dřevěné boxy
+        a.nav-link(href="produkt-vypis.html") #[img(src="/img/nav-img.svg" alt="...")] Dílenský nábytek a vozíky
         
     .nav-item-backdrop
