--- a/src/scss/components/_product-detail.scss
+++ b/src/scss/components/_product-detail.scss
@@ -1,5 +1,5 @@
 .product-detail{
-    padding: 60px 0;
+    padding: 40px 0;
 }
 .product-detail__photos{
     margin-right: 40px;
@@ -159,6 +159,7 @@
     padding-bottom: 40px;
     width: 100%;
     max-width: 420px;
+    display: none;
 }
 .variants__title{
     font-size: 14px;
