--- a/src/pug/produkt-vypis.pug
+++ b/src/pug/produkt-vypis.pug
@@ -15,7 +15,7 @@ html(lang=lang)
                 include components/_breadcrumbs.pug
                 section.page-heading
                     .container
-                        h1 Dřevěné krabice
+                        h1 RUČNÍ NÝTOVAČE
                         div(id="pageDescription") 
                             p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný... #[span.read-more(id="readMore") Číst více]
                             
@@ -39,7 +39,7 @@ html(lang=lang)
                                         a.subcategories__link(href="/produkt-vypis.html") 
                                             .subcategories__img
                                                 img.lazyload(src="/img/load-symbol.svg" data-src="/img/product-thumb-small.jpg" alt="Krabice na alkohol" title="Krabice na alkohol" width="46" height="46")
-                                            .subcategories__title Krabice na alkohol
+                                            .subcategories__title 2-STUPŇOVÝ RUČNÍ NÝTOVAČ
 
 
 
