--- a/src/pug/ucet-faktury.pug
+++ b/src/pug/ucet-faktury.pug
@@ -22,11 +22,11 @@ html(lang=lang)
 
 
                             .tab
-                                button.tablinks.active(onclick="openCity(event, '1')") Vydané Faktury
-                                button.tablinks(onclick="openCity(event, '2')") Objednávky 
-                                button.tablinks(onclick="openCity(event, '3')") Zálohové listy
-                                button.tablinks(onclick="openCity(event, '4')") Vratky/Dobropisy
-                                button.tablinks(onclick="openCity(event, '5')") Reklamace
+                                button.tablinks.active(onclick="openTab(event, '1')") Vydané Faktury
+                                button.tablinks(onclick="openTab(event, '2')") Objednávky 
+                                button.tablinks(onclick="openTab(event, '3')") Zálohové listy
+                                button.tablinks(onclick="openTab(event, '4')") Vratky/Dobropisy
+                                button.tablinks(onclick="openTab(event, '5')") Reklamace
 
 
                             .tabcontent(id="1" style="display: block;")
