--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -32,6 +32,8 @@ footer{
 }
 .copyright__wrap{
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 .copyright__title{
     flex-grow: 1;
@@ -60,7 +62,7 @@ footer{
 }
 @media screen and (max-width: 575px){
     footer {
-        padding: 00px 0 40px 0;
+        padding: 0px 0 20px 0;
     }
     .footer__title{
         font-size: 16px;
@@ -70,6 +72,7 @@ footer{
     }
     .copyright{
         font-size: 14px;
+        padding-top: 20px;
     }
     .copyright__author img {
         width: 50px;
