--- a/src/scss/components/_product-detail.scss
+++ b/src/scss/components/_product-detail.scss
@@ -385,7 +385,15 @@
 .product-detail__parameters tr:nth-child(odd) td{
     background: $gray-100;
 }
-
+.product-detail__info .product-card__tags{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    gap: 15px;
+}
 @media screen and (max-width: 991px){
     .product-detail__photos{
         margin: 0;
