--- a/src/pug/components/_breadcrumbs.pug
+++ b/src/pug/components/_breadcrumbs.pug
@@ -2,6 +2,6 @@
     .container
         a.breadcrumbs__item(href="/") Domů
         img.breadcrumbs__separator(src="/img/icons/cheveron.svg" alt=">")
-        a.breadcrumbs__item(href="/") Dřevěné boxy
+        a.breadcrumbs__item(href="/") RUČNÍ NÝTOVAČE
         img.breadcrumbs__separator(src="/img/icons/cheveron.svg" alt=">")
         span.breadcrumbs__item.--active 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY
