--- a/src/pug/produkt-detail-wholesale.pug
+++ b/src/pug/produkt-detail-wholesale.pug
@@ -91,7 +91,7 @@ html(lang=lang)
                                         div EAN: #[span(id="product-code") 76564160265]
                                         
                                         
-                                    p.product-detail__text Nabízíme náš dřevěný CARMEN VI BOX / KONTEJNER - přírodní, ekologický kontejner. Výsuvný box na dvě vína z přírodního dřeva s rukojetí - rukojetí z přírodního... #[a(href="#productDescription") Číst více]
+                                    p.product-detail__text Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný#[a(href="#productDescription") Číst více]
                                     .product-detail__tabletop 
                                         h5 Parametry
                                         table 
@@ -141,11 +141,11 @@ html(lang=lang)
                                 .col-12.col-lg-7
                                     .product-detail__description(id="productDescription")
                                         h2 Popis produktu
-                                        p Nabízíme náš dřevěný CARMEN VI BOX / KONTEJNER - přírodní, ekologický kontejner. Výsuvný box na dvě vína z přírodního dřeva s rukojetí - rukojetí z přírodního tlustého lana, která je praktická a snadno přepravitelná.
+                                        p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný
 
-                                        p Přírodní odstín. Perfektní předmět pro jedinečný dárek, zajímavý dekorativní motiv - vnese do vašeho domova přirozený ekologický nádech.
+                                        p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný
 
-                                        p Na přání je možné dokoupit dřevěnou vlnu (hobliny) a rytinu.
+                                        p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný
 
                                 .col-12.col-lg-1
 
