--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -5,7 +5,8 @@ html(lang=lang)
     include template/_head.pug  
     body
         include components/_modal-login.pug
-
+        include components/_modal-cart.pug
+        
         include components/_header.pug
         #wrapper
             
@@ -79,13 +80,13 @@ html(lang=lang)
                                             .tag.--recommended Doporučené
                                         .product-card__tagSingle 
                                             .tag.--top Top
-                                            
+
                                     h1.product-detail__title #{ProductName}
                                     .product-detail__code
                                         div Kód produktu: #[span(id="product-code") 7893/80X160-BI]
                                         div EAN: #[span(id="product-code") 76564160265]
 
-                                    p.product-detail__text Nabízíme náš dřevěný CARMEN VI BOX / KONTEJNER - přírodní, ekologický kontejner. Výsuvný box na dvě vína z přírodního dřeva s rukojetí - rukojetí z přírodního... #[a(href="#productDescription") Číst více]
+                                    p.product-detail__text Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný#[a(href="#productDescription") Číst více]
                                     form.product-detail__form(method="post")
                                         .variants(id="variants")
                                             .variants__title Výběr varianty
@@ -139,11 +140,11 @@ html(lang=lang)
                                 .col-12.col-lg-7
                                     .product-detail__description(id="productDescription")
                                         h2 Popis produktu
-                                        p Nabízíme náš dřevěný CARMEN VI BOX / KONTEJNER - přírodní, ekologický kontejner. Výsuvný box na dvě vína z přírodního dřeva s rukojetí - rukojetí z přírodního tlustého lana, která je praktická a snadno přepravitelná.
+                                        p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný
 
-                                        p Přírodní odstín. Perfektní předmět pro jedinečný dárek, zajímavý dekorativní motiv - vnese do vašeho domova přirozený ekologický nádech.
+                                        p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný
 
-                                        p Na přání je možné dokoupit dřevěnou vlnu (hobliny) a rytinu.
+                                        p Jednoduchý, často velmi podceňovaný předmět, který však může spojit funkčnost s krásným vzhledem a být tak nejen velmi užitečný
 
                                 .col-12.col-lg-1
 
