--- a/src/pug/components/_categories-section.pug
+++ b/src/pug/components/_categories-section.pug
@@ -6,16 +6,16 @@ section.categories
                 .categories-single
                     img.lazyload(src="/img/load-symbol.svg" data-src="/img/category-thumb-medium.png" alt="" title="" width="220" height="220")
                     a.categories-single__link(href="/produkt-vypis.html") Dřevěné krabičky
-                    p.categories-single__text Dřevěné boxy na hračky, krabičky na čaje nebo třeba organizéry a vybavení do kanceláře
+                    p.categories-single__text RUČNÍ NÝTOVAČE na hračky, krabičky na čaje nebo třeba organizéry a vybavení do kanceláře
 
             .col-12.col-md-4    
                 .categories-single
                     img.lazyload(src="/img/load-symbol.svg" data-src="/img/category-thumb-medium.png" alt="" title="" width="220" height="220")
                     a.categories-single__link(href="/produkt-vypis.html") Dřevěné krabičky
-                    p.categories-single__text Dřevěné boxy na hračky, krabičky na čaje nebo třeba organizéry a vybavení do kanceláře    
+                    p.categories-single__text RUČNÍ NÝTOVAČE na hračky, krabičky na čaje nebo třeba organizéry a vybavení do kanceláře    
 
             .col-12.col-md-4    
                 .categories-single
                     img.lazyload(src="/img/load-symbol.svg" data-src="/img/category-thumb-medium.png" alt="" title="" width="220" height="220")
                     a.categories-single__link(href="/produkt-vypis.html") Dřevěné krabičky
-                    p.categories-single__text Dřevěné boxy na hračky, krabičky na čaje nebo třeba organizéry a vybavení do kanceláře
+                    p.categories-single__text RUČNÍ NÝTOVAČE na hračky, krabičky na čaje nebo třeba organizéry a vybavení do kanceláře
