--- a/src/pug/components/_modal-cart.pug
+++ b/src/pug/components/_modal-cart.pug
@@ -15,7 +15,7 @@
                 button.modal__close(aria-label="Close modal" data-micromodal-close)
                 
             p.modal__cart-title 2-STUPŇOVÝ RUČNÍ NÝTOVAČ NA OCELOVÉ NÝTY lorem ipsum dolor sit amet
-            span.modal__cart-variant Varianta: Černý lak + prosklená dvířka
+            span.modal__cart-variant Varianta: 154689
             span.modal__cart-variant Počet kusů: 1
             span.modal__cart-price 1 118 Kč
             span.modal__cart-vat od 923,97 Kč bez DPH
