--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -348,6 +348,7 @@ body.--user-active .header-nav .user__dropdown{
     }
     .logo img{
         margin-left: 10px;
+        padding-right: 10px
     }
     .logo img{
         height: 32px;
