--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -48,6 +48,10 @@
         box-shadow: 0;
         border: 0;
     }
+    .cart-content .page.--narrow .page-heading{
+        padding-top: 30px;
+    }
+    
 }
 
 .cart-content .page.--narrow{
