--- a/src/scss/components/_product-detail.scss
+++ b/src/scss/components/_product-detail.scss
@@ -70,7 +70,10 @@
 }
 @media screen and (max-width: 575px){
     .product-card__fav{
-        top: -30px;
+        top: auto;
+        position: absolute;
+        bottom: 20px;
+        height: auto;
     }
 }
 
