--- a/src/pug/registrace.pug
+++ b/src/pug/registrace.pug
@@ -129,7 +129,9 @@ html(lang=lang)
                             .form-group 
                                 button.btn.--fullWidth(name="register-submit" id="register-submit") Odeslat ke schválení #[img(src="/img/icons/cheveron-white.svg")]
 
-
+                            .notice
+                                img(src="/img/icons/info.svg")
+                                span Vytvoření účtu může trvat 24 hodin (platné pro pracovní dny)
         
         include components/_footer.pug
 
