--- a/src/scss/components/_news-single.scss
+++ b/src/scss/components/_news-single.scss
@@ -57,6 +57,7 @@
     font-size: 16px;
     overflow: hidden;
     margin: 0;
+    margin-bottom: 10px;
 }
 @media screen and (max-width:991px){
     .news-single__top{
