--- a/src/scss/components/_product-card.scss
+++ b/src/scss/components/_product-card.scss
@@ -49,25 +49,27 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    background-color: $gray-100;
 }
 
 .product-card__img{
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    mix-blend-mode: multiply;
 }
 
 .product-card__tags{
     position: absolute;
-    top: -5px;
-    left: -5px;
+    top: -10px;
+    left: -10px;
     z-index: 1;
 }
 .product-card__tagsRight{
     position: absolute;
     left: auto;
-    right: -5px;
-    top: -5px;
+    right: -10px;
+    top: -10px;
     z-index: 1;
     text-align: right;
 }
@@ -192,6 +194,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 10px;
+    text-align: left;
 }
 .product-card__price.--alt .product-card__priceMain{
     font-size: 15px;
@@ -203,6 +206,7 @@
 }
 .product-card__price.--alt  span:last-child{
     text-align: right;
+    white-space: nowrap;
 }
 
 @media screen and (max-width:575px){
@@ -232,7 +236,7 @@
         font-size: 16px;
     }
     .product-card__thumb .product-card__tagsRight{
-        display: none;
+        
     }
     .product-card__thumb .product-card__tags {
         top: 5px;
