--- a/src/scss/components/_products-grid.scss
+++ b/src/scss/components/_products-grid.scss
@@ -13,6 +13,11 @@
     font-size: 14px;
     padding-bottom: 20px;
 }
+@media screen and (max-width: 1300px){
+    .products-grid{
+        grid-template-columns: repeat(2,minmax(0,1fr));
+    }
+}
 @media screen and (max-width: 991px){
     .products-grid{
         grid-template-columns: repeat(3,minmax(0,1fr));
