--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,11 @@ body.cart #navToggle{
     position: relative;
     grid-template-columns: minmax(auto, 320px) minmax(320px, auto);
 }
+@media screen and (max-width: 1300px){
+    #wrapper{
+        grid-template-columns: minmax(auto, 280px) minmax(280px, auto);
+    }
+}
 @media screen and (max-width: 991px){
     #wrapper{
         display: flex;
@@ -512,7 +517,14 @@ section.products{
 .page-content .notice{
      margin: 0;
 }
-
+form .notice{
+    border: 1px solid $gray-300;
+    border-left: 3px solid $yellow-500;
+    padding: 25px 25px 25px 30px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
 
 .cart-aside__item{
     display: flex;
@@ -602,6 +614,7 @@ section.products{
 }
 .form-group.--radiogroup label{
     padding: 0;
+    width: 100%;
 }
 
 .cart-table__footerSummary{
@@ -721,4 +734,8 @@ section.products{
         grid-template-columns: 1fr 1fr;
         gap: 10px;
     }
+}
+
+#register-form{
+    margin-bottom: 40px;
 }
