--- a/src/scss/components/_cart-content.scss
+++ b/src/scss/components/_cart-content.scss
@@ -241,6 +241,10 @@
 .cart-table__export-group .item{
     background: white;
     padding: 2px 8px;
+    cursor: pointer;
+}
+.cart-table__export-group .item:hover{
+    box-shadow: 0px 3px 8px 0px rgba(0,0,0,.05);
 }
 @media screen and (max-width: 575px){
     .cart-item {
