--- a/src/scss/components/_page-content.scss
+++ b/src/scss/components/_page-content.scss
@@ -2,14 +2,13 @@
     padding-top: 0;
 }
 .page-content__cell{
-    padding-bottom: 80px;
+    padding: 40px;
+    margin-bottom: 40px;
+    background: $gray-100;
 }
 .page-content__cell > *:last-child{
     padding-bottom: 0px;
     margin: 0;
-}
-.page-content .row> *:last-child > .page-content__cell{
-    padding-bottom: 0px;
 }
 
 
@@ -48,7 +47,7 @@
     justify-content: center;
     align-items: center;
     height: 52px;
-    border: 1px solid $gray-300;
+    background: white;
     padding: 0 30px;
     font-size: 18px;
     font-weight: 500;
@@ -101,9 +100,9 @@
     }
 }
 .page-content__cell h2{
-    border-bottom: 1px solid $gray-300;
-    padding-bottom: 10px;
-    margin-bottom: 40px;
+    border-bottom: 2px solid $white;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 .page-content__cell h5{
     padding-bottom: 40px;
