--- a/src/pug/blog-vypis.pug
+++ b/src/pug/blog-vypis.pug
@@ -16,9 +16,10 @@ html(lang=lang)
                     section.page-heading
                         .container
                             .page-heading-inner
-                                h1 Co je u nás v kingtony nového
-                                p The foundations of an optimal ergonomic workspace include the chair and stool that support us all day long and complement our home office without compromising on aesthetics.
-                    
+                                span
+                                    h1 Co je u nás v kingtony nového
+                                    p The foundations of an optimal ergonomic workspace include the chair and stool that support us all day long and complement our home office without compromising on aesthetics.
+                        
                     section.page-content
                         .container 
                             .row
