--- a/src/scss/components/_page-heading.scss
+++ b/src/scss/components/_page-heading.scss
@@ -61,6 +61,12 @@
 .page-heading-inner{
     background-color: $gray-100;
     padding: 30px 20px;
+    display: flex;
+    gap: 30px;
+    img{
+        height: 80px;
+        width: 80px;
+    }
 }
 .page-heading-inner h1{
 
@@ -82,6 +88,11 @@
     }
     #pageDescription{
         display: none;
+    }
+    .page-heading-inner{
+        img{
+            display: none;
+        }
     }
 }
 
