--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -757,3 +757,58 @@ form .notice{
 #register-form{
     margin-bottom: 40px;
 }
+
+
+section.bestsellers{
+    padding-bottom: 0;
+}
+.bestsellers h3{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 22px;
+    padding-bottom: 10px;
+}
+.bestsellers-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+.bestsellers-single{
+    display: flex;
+    border: 1px solid $gray-300;
+    padding: 10px;
+    gap: 15px;
+}
+.bestsellers-single-img{
+    background-color: $gray-100;
+    height: 60px;
+    width: 60px;
+    flex-shrink: 0;
+}
+.bestsellers-single img{
+    mix-blend-mode: multiply;
+}
+.bestsellers-single-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: $gray-900;
+    width: 100%;
+}
+.bestsellers-single-content p{
+    margin: 0;
+    padding-bottom: 5px;
+}
+.bestsellers-single-bottom{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.bestsellers-single-bottom span{
+    color: $green-500;
+}
+.bestsellers-single-bottom strong{
+    flex-grow: 1;
+    text-align: right;
+    padding-right: 10px;
+}
